Specialize tests to ClientBackedDataStore
We have only one subclass of AbstractDataStore, use that instead of
AbstractDataStore.

Change-Id: Ia6552b1c050fb99e3084c2d8f5c36ea052e991be
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>